--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -25,10 +25,18 @@
 .invite {
   .font-main(16px; 18px);
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    .font-main(20px; 22px);
+  }
 }
 
 .address {
   .font-secondary(14px; 20px);
+
+  @media (min-width: @tablet-width) {
+    .font-secondary(16px; 20px);
+  }
 }
 
 .contacts--background {
