--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -9,9 +9,7 @@
 .page-header__container {
   @media (min-width: @tablet-width) {
     .flex(space-between);
-    padding: @padding-tablet;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px 30px;
   }
 
   @media (min-width: @desktop-width) {
