--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -29,6 +29,7 @@
 .form__data-scheme-wrapper {
   @media (min-width: @desktop-width) {
     display: flex;
+    padding: 70px 0;
   }
 }
 
@@ -38,6 +39,10 @@
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 70px;
   }
 }
 
