--- a/source/less/blocks/scheme.less
+++ b/source/less/blocks/scheme.less
@@ -2,6 +2,17 @@
   margin: 0;
   padding: 0;
   margin-bottom: 20px;
+  margin-top: 20px;
+
+  @media (min-width: @desktop-width) {
+    border: 1px solid @special_white_2;
+    flex-grow: 1;
+    margin-left: 80px;
+    margin-bottom: 0;
+    height: 180px;
+    padding: 35px 0 35px 20px;
+
+  }
 }
 
 .scheme {
@@ -10,7 +21,7 @@
   color: @special_dark_grey_2;
   display: grid;
   justify-content: space-between;
-  row-gap: 30px;
+  row-gap: 25px;
   padding-top: 20px;
   padding-bottom: 20px;
 
