Адаптивная сетка каталога

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,8 +1,7 @@
 .contacts__wrapper {
   margin: 0 auto;
   padding: @padding-mobile;
-  .flex;
-  justify-content: space-between;
+  .flex(space-between);
   padding-top: 30px;
   padding-bottom: 30px;
 
