--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -36,3 +36,11 @@
     .font-main(60px; 60px);
   }
 }
+
+.page-main__section-container {
+  @media (min-width: @desktop-width) {
+    .flex(space-between);
+    flex-wrap: nowrap;
+    padding-right: 110px;
+  }
+}
