--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -6,6 +6,11 @@
     width: 768px;
     padding: @padding-tablet;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 1120px;
+    padding: @padding-desktop;
+  }
 }
 
 .additional-products__title {
@@ -24,11 +29,24 @@
 .additional-products__item {
   border-bottom: 1px solid @special_grey;
   padding-bottom: 20px;
+
+  @media (min-width: @desktop-width) {
+    .flex(space-between);
+    flex-wrap: nowrap;
+  }
 }
 
 .additional-products__description {
   .font-main(16px; 16px);
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    .font-main(20px; 20px);
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 515px;
+  }
 }
 
 .additional-products__list {
@@ -37,6 +55,15 @@
   grid-template-columns: repeat(2, auto);
   grid-template-rows: auto;
   justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    .font-secondary(16px; 20px);
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 360px;
+    padding: 0 35px;
+  }
 }
 
 .additional-products__button {
@@ -50,5 +77,9 @@
 
   @media (min-width: @tablet-width) {
     width: 630px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 245px;
   }
 }
