--- a/source/less/blocks/basic-products.less
+++ b/source/less/blocks/basic-products.less
@@ -5,6 +5,11 @@
     width: 768px;
     padding: @padding-tablet;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 1440px;
+    padding: @padding-desktop;
+  }
 }
 
 .basic-products__items {
@@ -12,8 +17,14 @@
 
   @media (min-width: @tablet-width) {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     column-gap: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 80px;
   }
 }
 
@@ -28,6 +39,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: start;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
 
 .basic-products__image {
@@ -35,11 +51,24 @@
   align-self: center;
 }
 
-.description-more {
-  .flex(flex-start);
+.basic-products__description-wrapper {
+  display: grid;
+  justify-content: center;
+}
+
+.basic-products__description {
+  display: inline-block;
+  width: 80px;
   .font-main(16px; 20px);
-  margin-top: 0;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    .font-main(20px; 24px);
+    width: 175px;
+    padding: 0 20px;
+    text-align: center;
+    justify-self: center;
+  }
 }
 
 .basic-products__list {
@@ -48,6 +77,10 @@
   grid-template-rows: repeat(3, auto);
   justify-content: space-between;
   .font-secondary(12px; 16px);
+
+  @media (min-width: @tablet-width) {
+    .font-secondary(16px; 16px);
+  }
 }
 
 .basic-products__button {
@@ -59,11 +92,23 @@
   .font-main(16px; 20px);
   color: @white;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    width: 250px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 170px;
+  }
 }
 
 .basic-products__item-box {
   position: relative;
   padding-top: 50px;
+
+  @media (min-width: @tablet-width) {
+    text-align: center;
+  }
 }
 
 .item-box::before {
@@ -74,15 +119,37 @@
   background: url("@{path-to-img}/plus.svg") no-repeat center;
   top: 0;
   left: 145px;
+
+  @media (min-width: @tablet-width) {
+    left: 125px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 100px;
+  }
 }
 
 .basic-products__description-more {
   .flex();
+  margin-top: 0;
+}
+
+.description-more {
+  .font-main(16px; 20px);
+  text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    .font-main(20px; 22px);
+  }
 }
 
 .text-more {
   .flex();
   .font-secondary(12px; 16px);
+
+  @media (min-width: @tablet-width) {
+    .font-secondary(16px; 18px);
+  }
 }
 
 .button--basic-products-more {
