--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,11 +1,3 @@
-.page-header {
-  border-bottom: 1px solid @special_grey_3;
-
-  @media (min-width: @tablet-width) {
-    border-bottom: none;
-  }
-}
-
 .page-header__container {
   @media (min-width: @tablet-width) {
     .flex(space-between);
@@ -43,15 +35,36 @@
 }
 
 .page-header__toggle {
-  display: block;
-  width: 24px;
-  height: 16px;
-  background-image: url("../img/open-toggle.svg");
-  background-color: @white;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-left: none;
-  border-right: none;
+  &--open {
+    display: block;
+    width: 24px;
+    height: 16px;
+    background-image: url("../img/open-toggle.svg");
+    background-color: @white;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 1.5px solid @black;
+    border-left: none;
+    border-right: none;
+    outline: none;
+    cursor: pointer;
+  }
+
+  &--closed {
+    display: block;
+    width: 18px;
+    height: 18px;
+    background-image: url("../img/closed-toggle.svg");
+    background-color: @white;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 1.5px solid @black;
+    border: none;
+    outline: none;
+    cursor: pointer;
+
+  }
+
 
   @media (min-width: @tablet-width) {
     display: none;
