--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -70,7 +70,7 @@
 .promo__slogan {
   padding: @padding-mobile;
   z-index: 2;
-  margin-top: 20px;
+  margin-top: 25px;
   margin-bottom: 30px;
 }
 
@@ -131,6 +131,14 @@
   .font-main(14px; 14px);
   color: @white;
   text-transform: uppercase;
+
+  &:hover {
+    background-color: @basic_green_2;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
 }
 
 @media (min-width: @tablet-width) {
