--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -7,7 +7,9 @@
     display: block;
   }
 
-
+  &--nojs {
+    display: block;
+  }
 
   @media (min-width: @tablet-width) {
     display: block;
@@ -36,6 +38,7 @@
 .navigation-list {
   .list-style();
   .font-main(20px; 20px);
+  text-transform: uppercase;
   font-weight: 500;
 
   @media (min-width: @tablet-width) {
