доверстал index tablet

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -3,13 +3,11 @@
   padding: @padding-mobile;
   .flex(space-between);
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 25px;
 
   @media (min-width: @tablet-width) {
     width: 768px;
-    padding: @padding-tablet;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 65px 70px;
   }
 
   @media (min-width: @desktop-width) {
