--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -59,7 +59,7 @@
   border-top: 1px solid @special_white;
 
   @media (min-width: @tablet-width) {
-    border-bottom: none;
+    border: none;
   }
 }
 
