--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -6,10 +6,12 @@
 
   @media (min-width: @tablet-width) {
     width: 768px;
-    padding: @padding-mobile;
+    padding: @padding-tablet;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 
   @media (min-width: @desktop-width) {
