--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,7 +1,8 @@
 .page-header__container {
   @media (min-width: @tablet-width) {
     .flex(space-between);
-    padding: 20px 30px;
+    padding: 20px 0;
+    padding-left: 50px;
   }
 
   @media (min-width: @desktop-width) {
