--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -5,7 +5,7 @@
 @desktop-width: 1440px;
 @mobile-width-only: 767px;
 @padding-mobile: 0 20px;
-@padding-tablet: 0 70px;
+@padding-tablet: 0 30px;
 @padding-desktop: 0 110px;
 
 // Basic-colors
@@ -18,6 +18,7 @@
 @special_grey_2: #666666;
 @special_grey_3: #D9D9D9;
 @special_grey_4: #EAEAEA;
+@special_grey_5: #DCDCDC;
 @special_dark_grey: #444444;
 @special_dark_grey_2: #222222;
 @status_error: #FF8282;
