--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -20,7 +20,8 @@
 
   @media (min-width: @desktop-width) {
     margin: 0;
-    margin-left: 80px;
+    margin-left: 160px;
+    margin-top: 25px;
   }
 }
 
