--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -19,6 +19,7 @@
 @special_grey_3: #D9D9D9;
 @special_grey_4: #EAEAEA;
 @special_grey_5: #DCDCDC;
+@special_grey_6: #C4C4C4;
 @special_dark_grey: #444444;
 @special_dark_grey_2: #222222;
 @status_error: #FF8282;
