--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -1,16 +1,24 @@
 .form__comment {
   margin: 0;
   padding: 0;
-  margin-bottom: 30px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 60px;
+  }
 }
 
 .comment__wrapper {
-  padding: 50px 0;
+  padding: 0;
+  margin-bottom: 25px;
 }
 
 .comment {
   .font-main(24px; 26px);
-  padding-top: 40px;
+  padding-top: 30px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 75px;
+  }
 
   legend {
     position: relative;
@@ -62,6 +70,7 @@
     @media (min-width: @tablet-width) {
       .font-main(20px; 30px);
       width: 635px;
+      height: 174;
     }
 
     @media (min-width: @desktop-width) {
