--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -14,7 +14,9 @@
 
   @media (min-width: @desktop-width) {
     width: 1440px;
+    height: 450px;
     padding: @padding-desktop;
+    padding-top: 70px;
   }
 }
 
@@ -39,6 +41,10 @@
   @media (min-width: @tablet-width) {
     .flex(start);
   }
+
+  @media (min-width: @desktop-width) {
+    .flex(space-between);
+  }
 }
 
 .features__features-item {
@@ -56,6 +62,9 @@
 
   @media (min-width: @desktop-width) {
     width: 20%;
+    margin: 0;
+    margin-top: 140px;
+
   }
 }
 
@@ -63,12 +72,22 @@
   @media (min-width: @tablet-width) {
     margin-left: 137px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+    margin-top: 140px;
+  }
 }
 
 .features-item:nth-child(3),
 .features-item:nth-child(4) {
   @media (min-width: @tablet-width) {
     margin-top: 185px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+    margin-top: 140px;
   }
 }
 
