--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,10 +1,11 @@
 .form__wrapper {
   width: 320px;
   padding: @padding-mobile;
+  padding-bottom: 20px;
 
   @media (min-width: @tablet-width) {
     width: 768px;
-    padding: @padding-tablet;
+    padding: 0 70px 65px 70px;
   }
 
   @media (min-width: @desktop-width) {
@@ -23,6 +24,7 @@
 
   @media (min-width: @tablet-width) {
     .font-main(20px; 30px);
+    padding-top: 25px;
   }
 }
 
@@ -39,6 +41,7 @@
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
+    margin-top: 20px;
   }
 
   @media (min-width: @desktop-width) {
@@ -47,7 +50,6 @@
 }
 
 .form__button {
-  margin-top: 10px;
   margin-bottom: 10px;
 }
 
@@ -71,8 +73,7 @@
   margin-bottom: 10px;
 
   @media (min-width: @tablet-width) {
-    margin-left: 35px;
-    margin-right: auto;
+    margin: 0 auto 15px 65px;
     .font-secondary(16px; 16px);
   }
 }
