--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -17,6 +17,8 @@
   @media (min-width: @desktop-width) {
     width: 1440px;
     padding: @padding-desktop;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 }
 
@@ -25,6 +27,10 @@
   padding-top: 40px;
   padding-bottom: 30px;
   border-bottom: 1px solid @special_grey_3;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+  }
 }
 
 .copyright {
