--- a/source/less/blocks/scheme.less
+++ b/source/less/blocks/scheme.less
@@ -1,8 +1,12 @@
 .form__scheme {
   margin: 0;
   padding: 0;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin-top: 5px;
+  margin-bottom: 30px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 75px;
+  }
 
   @media (min-width: @desktop-width) {
     border: 1px solid @special_white_2;
@@ -24,6 +28,10 @@
   padding-top: 20px;
   padding-bottom: 20px;
 
+  @media (min-width: @tablet-width) {
+    padding-left: 30px;
+  }
+
   input {
     .visually-hidden;
   }
@@ -31,7 +39,11 @@
   label {
     display: block;
     position: relative;
-    padding-left: 65px;
+    padding-left: 45px;
+
+    @media (min-width: @tablet-width) {
+      padding-left: 60px;
+    }
 
     &::before {
       content: "";
@@ -44,6 +56,11 @@
       border: 1px solid @special_grey;
       top: -5px;
       left: 0;
+
+      @media (min-width: @tablet-width) {
+        width: 40px;
+        height: 40px;
+      }
     }
   }
 
@@ -57,6 +74,13 @@
     border-radius: 50%;
     top: 4px;
     left: 9px;
+
+    @media (min-width: @tablet-width) {
+      width: 18px;
+      height: 18px;
+      top: 6px;
+      left: 11px;
+    }
   }
 
   @media (min-width: @tablet-width) {
