--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -4,6 +4,10 @@
   padding-top: 20px;
   padding-bottom: 15px;
   border-bottom: 1px solid @special_grey_3;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+  }
 }
 
 .social__social-item:not(:last-child) {
