доверстал страницу формы

--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -70,11 +70,12 @@
     @media (min-width: @tablet-width) {
       .font-main(20px; 30px);
       width: 635px;
-      height: 174;
+      height: 175px;
     }
 
     @media (min-width: @desktop-width) {
       width: 1220px;
+      height: 175px;
     }
   }
 
