--- a/source/less/blocks/owner.less
+++ b/source/less/blocks/owner.less
@@ -6,6 +6,10 @@
   @media (min-width: @tablet-width) {
     margin-top: 80px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 65px;
+  }
 }
 
 .owner__wrapper {
@@ -16,7 +20,8 @@
   @media (min-width: @desktop-width) {
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
-    padding: 70px 0;
+    margin-top: 0;
+    padding-top: 10px;
   }
 }
 
@@ -33,6 +38,11 @@
 
   @media (min-width: @tablet-width) {
     padding-top: 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 10px;
+
   }
 
   legend {
