--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -5,11 +5,11 @@
   .font-main(36px; 36px);
 
   @media (min-width: @tablet-width) {
-    padding: 30px 70px;
+    padding: 35px 70px 30px 70px;
     .font-main(60px; 60px);
   }
 
   @media (min-width: @desktop-width) {
-    padding: 30px 110px;
+    padding: 70px 110px 30px 110px;
   }
 }
