--- a/source/less/blocks/additive.less
+++ b/source/less/blocks/additive.less
@@ -3,7 +3,11 @@
   padding: 0;
 
   @media (min-width: @tablet-width) {
-    margin-top: 60px;
+    margin-top: 35px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 40px;
   }
 }
 
@@ -22,8 +26,9 @@
   }
 
   @media (min-width: @desktop-width) {
-    flex-wrap: nowrap;
-    padding: 40px 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
   }
 }
 
