--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -11,7 +11,12 @@
   }
 
   @media (min-width: @desktop-width) {
-    .visually-hidden;
+    position: absolute;
+    width: 570px;
+    height: 200px;
+    background-color: @white;
+    margin-top: 100px;
+    margin-left: 100px;
   }
 }
 
