--- a/source/less/blocks/data.less
+++ b/source/less/blocks/data.less
@@ -5,6 +5,10 @@
   @media (min-width: @tablet-width) {
     margin-top: 30px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 0;
+  }
 }
 
 .data {
