--- a/source/less/blocks/scheme.less
+++ b/source/less/blocks/scheme.less
@@ -14,7 +14,7 @@
     margin-left: 80px;
     margin-bottom: 0;
     height: 180px;
-    padding: 35px 0 35px 20px;
+    margin-top: 20px;
   }
 }
 
