доверстал мобайл каталога

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -79,6 +79,14 @@
   padding: 23px;
   box-sizing: border-box;
 
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @media (min-width: @desktop-width) {
     position: relative;
   }
