--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -28,9 +28,10 @@
 .title-main--catalog {
   .font-main(36px; 36px);
   padding: @padding-mobile;
-  padding-top: 40px;
+  padding-top: 25px;
   padding-bottom: 40px;
   border-bottom: 1px solid @special_grey_1;
+  border-top: 1px solid @special_grey_1;
   justify-content: flex-start;
 
   @media (min-width: @tablet-width) {
@@ -39,6 +40,7 @@
 }
 
 .page-main__section-container {
+  
   @media (min-width: @desktop-width) {
     .flex(space-between);
     flex-wrap: nowrap;
