--- a/source/less/blocks/basic-products.less
+++ b/source/less/blocks/basic-products.less
@@ -14,6 +14,7 @@
 
 .basic-products__items {
   .list-style();
+  display: grid;
 
   @media (min-width: @tablet-width) {
     display: grid;
@@ -30,7 +31,6 @@
 
 .basic-products__item {
   border-bottom: 1px solid @special_grey_1;
-  padding-top: 20px;
   padding-bottom: 20px;
 }
 
@@ -39,6 +39,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: start;
+  padding-top: 20px;
+
 
   @media (min-width: @tablet-width) {
     display: grid;
@@ -48,12 +50,13 @@
 
 .basic-products__image {
   justify-self: center;
-  align-self: center;
+  margin-top: 13px;
 }
 
 .basic-products__description-wrapper {
   display: grid;
-  justify-content: center;
+  justify-content: start;
+  .outline(@red);
 }
 
 .basic-products__description {
@@ -61,6 +64,8 @@
   width: 80px;
   .font-main(16px; 20px);
   text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 15px;
 
   @media (min-width: @tablet-width) {
     .font-main(20px; 24px);
@@ -73,10 +78,13 @@
 
 .basic-products__list {
   display: grid;
-  grid-template-columns: repeat(2, auto);
+  grid-template-columns: min-content auto;
   grid-template-rows: repeat(3, auto);
   justify-content: space-between;
+  width: 140px;
   .font-secondary(12px; 16px);
+  margin: 0;
+  .outline(@yellow);
 
   @media (min-width: @tablet-width) {
     .font-secondary(16px; 16px);
@@ -104,7 +112,7 @@
 
 .basic-products__item-box {
   position: relative;
-  padding-top: 50px;
+  padding-top: 80px;
 
   @media (min-width: @tablet-width) {
     text-align: center;
@@ -117,7 +125,7 @@
   width: 30px;
   height: 30px;
   background: url("@{path-to-img}/plus.svg") no-repeat center;
-  top: 0;
+  top: 30px;
   left: 145px;
 
   @media (min-width: @tablet-width) {
@@ -131,7 +139,7 @@
 
 .basic-products__description-more {
   .flex();
-  margin-top: 0;
+  margin: 0;
 }
 
 .description-more {
