--- a/source/less/blocks/basic-products.less
+++ b/source/less/blocks/basic-products.less
@@ -1,5 +1,5 @@
 .basic-products__wrapper {
-  margin: 0 auto;
+  margin: 0;
 
   @media (min-width: @tablet-width) {
     width: 768px;
@@ -32,6 +32,17 @@
 .basic-products__item {
   border-bottom: 1px solid @special_grey_1;
   padding-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    background-color: @basic_grey;
+    margin-top: 120px;
+    margin-bottom: 25px;
+    min-height: 430px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 245px;
+  }
 }
 
 .basic-products__item-wrapper {
@@ -51,12 +62,30 @@
 .basic-products__image {
   justify-self: center;
   margin-top: 13px;
+
+  @media (min-width: @tablet-width) {
+    transform: scale(2);
+    margin-top: -20px;
+  }
+}
+
+.basic-products__image--big {
+  @media (min-width: @tablet-width) {
+    margin-top: -35px;
+  }
 }
 
 .basic-products__description-wrapper {
   display: grid;
   justify-content: start;
-  .outline(@red);
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    justify-content: center;
+    margin-top: 80px;
+    margin-bottom: 10px;
+    min-height: 155px;
+  }
 }
 
 .basic-products__description {
@@ -73,6 +102,7 @@
     padding: 0 20px;
     text-align: center;
     justify-self: center;
+    margin-bottom: 0;
   }
 }
 
@@ -84,10 +114,14 @@
   width: 140px;
   .font-secondary(12px; 16px);
   margin: 0;
-  .outline(@yellow);
 
   @media (min-width: @tablet-width) {
     .font-secondary(16px; 16px);
+    width: 250px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 170px;
   }
 }
 
@@ -110,12 +144,18 @@
   }
 }
 
+.basic-products__item--more {
+  background: none;
+  border: 2px solid @basic_grey;
+}
+
 .basic-products__item-box {
   position: relative;
   padding-top: 80px;
 
   @media (min-width: @tablet-width) {
     text-align: center;
+    padding-top: 150px;
   }
 }
 
@@ -129,7 +169,11 @@
   left: 145px;
 
   @media (min-width: @tablet-width) {
-    left: 125px;
+    width: 60px;
+    height: 60px;
+    background-size: cover;
+    top: 40px;
+    left: 135px;
   }
 
   @media (min-width: @desktop-width) {
@@ -148,6 +192,8 @@
 
   @media (min-width: @tablet-width) {
     .font-main(20px; 22px);
+    width: 150px;
+    margin: 0 auto;
   }
 }
 
@@ -157,6 +203,9 @@
 
   @media (min-width: @tablet-width) {
     .font-secondary(16px; 18px);
+    width: 170px;
+    margin: 25px auto;
+    margin-bottom: 90px;
   }
 }
 
