--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -36,13 +36,21 @@
 
   @media (min-width: @tablet-width) {
     .font-main(60px; 60px);
+    margin-left: 0;
+    padding-top: 35px;
+    padding-left: 30px;
+    border: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 80px;
+    padding-top: 45px;
   }
 }
 
 .page-main__section-container {
-  
   @media (min-width: @desktop-width) {
-    .flex(space-between);
+    .flex(flex-start);
     flex-wrap: nowrap;
     padding-right: 110px;
   }
